--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,25 @@
 ---
 
 @import "{{ site.theme }}";
+/* Increase the overall font size */
+body {
+    font-size: 18px; /* Adjust the size as needed */
+    line-height: 1.6; /* Optional: Adjust line spacing for better readability */
+  }
+  
+  /* Adjust heading sizes */
+  h1 {
+    font-size: 2.5em;
+  }
+  
+  h2 {
+    font-size: 2em;
+  }
+  
+  h3 {
+    font-size: 1.75em;
+  }
+  
+  p {
+    font-size: 16px; /* Adjust paragraph font size */
+  }
