--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,3 +24,7 @@ body {
   p {
     font-size: 16px; /* Adjust paragraph font size */
   }
+  /* Change the background color of the entire page */
+body {
+    background-color: #f4f4f4; /* Light gray */
+  }
