--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,5 +26,5 @@ body {
   }
   /* Change the background color of the entire page */
 body {
-    background-color: #f4f4f4; /* Light gray */
+    background-color: #ffffff; /* Light gray */
   }
