--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,28 @@
 ---
 
 @import "{{ site.theme }}";
-
+/* Increase the overall font size */
+body {
+    font-size: 16px; /* Adjust the size as needed */
+    line-height: 1.6; /* Optional: Adjust line spacing for better readability */
+  }
+  
+  /* Adjust heading sizes */
+  h1 {
+    font-size: 2.0em;
+  }
+  
+  h2 {
+    font-size: 1.6em;
+  }
+  
+  h3 {
+    font-size: 1.4em;
+  }
+  
+  p {
+    font-size: 16px; /* Adjust paragraph font size */
+  }
   @media (max-width: 768px) {
     /* Adjust font sizes for smaller screens */
     body {
