--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     <![endif]-->
     {% include head-custom.html %}
     {% include favicon.html %}
+    <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
   </head>
   <body>
     <div class="wrapper">
