--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -70,9 +70,9 @@ h1, h2 {
   border-radius: 5px;
   font-size: 14px;
   overflow-x: auto;
-  font-family: monospace;
-  white-space: pre-wrap;
+  font-family: 'Fira Code', Consolas, Menlo, Courier, monospace;
+  white-space: pre;
+  word-break: normal;
 }
-
 
 
